add style index.html

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ img {
 }
 
 body {
-  font-family: 'font', sans-serif;
+  font-family: Arial, Verdana, sans-serif;
 }
 
 .main-content {
@@ -43,6 +43,10 @@ body {
 .link-home {
   display: inline-block;
   padding: 24px 49px;
+  font-weight: 700;
+  font-size: 18px;
+  background-color: #3f2aff;
+
 }
 
 .link-home:not(:last-child) {
@@ -51,6 +55,9 @@ body {
 
 .link-download {
   padding-left: 25px;
+  font-weight: 700;
+  font-size: 18px;
+  color: #3f2aff;
 }
 
 .container {
